--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "esbuild-jest": "^0.5.0",
     "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.1.0",
     "mysql2": "^3.2.0",
