--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 *.env.*
 
 # pem
-private.pem
-public.pem
+*.private.pem
+*.public.pem
 *.pem.*
 
 # compiled output
 /dist
 /node_modules
-
+/secrets
 # Logs
 logs
 *.log
